[gd_scene load_steps=3 format=3 uid="uid://bvk3x4y8qn7ls"]

[ext_resource type="Script" path="res://scenes/ui/AchievementNotification.gd" id="1_m3j5k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_shine"]
bg_color = Color(1, 1, 1, 0.1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="AchievementNotification" type="PanelContainer"]
custom_minimum_size = Vector2(360, 0)
offset_right = 360.0
offset_bottom = 100.0
script = ExtResource("1_m3j5k")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="IconTexture" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="HBoxTop" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CategoryLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxTop"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 11
text = "LOGRO"
uppercase = true

[node name="CloseButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxTop"]
unique_name_in_owner = true
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
text = "×"
flat = true

[node name="TitleLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Logro Desbloqueado"
autowrap_mode = 3

[node name="DescriptionLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Descripción del logro"
autowrap_mode = 3

[node name="ShineEffect" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_filter = 2
color = Color(1, 1, 1, 0.2)
